  verify that the examples work.

- math-dplR.Rnw.txt is the source of math-dplR.pdf, with extra file
  extension .txt to prevent automatic rebuild by R CMD build and R CMD
  check

- math-dplR.bib is the BibTeX bibliography of the document

- math-dplR.R is the R source extracted from the document

- build-math-dplR.R is a build script

New file rasterPlot.R
---------------------

- New function rasterPlot(), internal to the package.  Adds a
  raster image drawn with low level graphics commands to the current
  high level plot.

Files: rcompact.c, readloop.c
-----------------------------

- Made the C code of read.compact() and read.tucson() more
  resilient to unusual inputs

File: redfit.c
--------------

- Avoid using the long double type in some cases. Hopefully this
  will speed up otherwise unbearable computation times on some
  systems.

File: timeseries-dplR.Rnw
-------------------------

- wavelet.plot(useRaster=TRUE) in the vignette reduces the size of
  both timeseries-dplR.pdf and the package tarball

File: wavelet.plot.R
--------------------

- Added two options to wavelet.plot().
  'useRaster': draw the filled contours as a raster image? (default 'FALSE')
  'res': resolution of the filled contours when 'useRaster' is 'TRUE'
- A subtle change to the default value of wavelet.levels: To get
  the sequence 0, 0.1, 0.2, ..., 1 it is best to use (0:10)/10
  instead of seq(from=0, to=1, by=0.1).  Parentheses in the former are
  used for clarity of meaning.

Files: xskel.ccf.plot.R and xskel.plot.R
----------------------------------------

- Code optimizations
- Small changes to output

* CHANGES IN dplR VERSION 1.6.0

File: TODO
-------------------------
- Added a TODO list that follows the todo.ell format.

File: NAMESPACE
-------------------------
- Added chron.plot to export list.
- Added interseries.cor to export list.
- Added plot.rwl as an S3Method.
- Added plot.crn as an S3Method.
- Added summary.rwl as an S3Method.